--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
           <a href="https://github.com/iamrohitgund">
             <i class="fab fa-github"></i>
           </a>
+          <a href="https://iamrohitgund.wordpress.com/">
+            <i class="fab fa-wordpress"></i>
+          </a>
           <a href="https://twitter.com/iamrohitgund">
             <i class="fab fa-twitter"></i>
           </a>
