--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="subheading mb-5">2404 Nutwood Ave Apt A10, Fullerton, CA, 92831 (+1) 714-873-9806 ·
           <a href="mailto:name@email.com">rohitgund@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">Looking for an entry-level position as a Software Engineer in a dynamic firm that values my analytical and technical skills and provides scope for updating my knowledge, I seek a company that will help me contribute to its development while concurrently aiding my personal growth.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/iamrohitgund/">
             <i class="fab fa-linkedin-in"></i>
