--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Founder,Web Developer, Business Analyst</h3>
+            <h3 class="mb-0">Founder,Software / Web Developer, Business Analyst</h3>
             <div class="subheading mb-3">infobird.in</div>
             <p>Infobird.in was founded in 2015 with the only purpose in mind, to provide the most authoritative information related to technology. In our initial days, we provided consultancy about purchasing consumer electronics and a few web services. Later, We decided to move into the web media industry and focus on articles and online content.</p>
           </div>
@@ -163,13 +163,13 @@
       <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            C++</li>
+            Python</li>
           <li>
             <i class="fa-li fa fa-check"></i>
             Java</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Python</li>
+            Java</li>
           <li>
             <i class="fa-li fa fa-check"></i>
             HTML</li>
