--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Software Developer, Business Analyst</h3>
+            <h3 class="mb-0">Software Developer</h3>
             <div class="subheading mb-3">infobird.in</div>
             <p>Infobird.in was founded in 2015 with the only purpose in mind, to provide the most authoritative information related to technology. In our initial days, we provided consultancy about purchasing consumer electronics and a few web services. Later, We decided to move into the web media industry and focus on articles and online content.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - July 2019</span>
+            <span class="text-primary">July 2018 - July 2019</span>
           </div>
         </div>
 
