--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <span class="text-primary">Gund</span>
         </h1>
         <div class="subheading mb-5">2404 Nutwood Ave Apt A10, Fullerton, CA, 92831 (+1) 714-873-9806 ·
-          <a href="mailto:name@email.com">iamrohitgund@gmail.com</a>
+          <a href="mailto:iamrohitgund@gmail.com">iamrohitgund@gmail.com</a>
         </div>
         <p class="lead mb-5">Looking for an entry-level position as a Software Engineer in a dynamic firm that values my analytical and technical skills and provides scope for updating my knowledge, I seek a company that will help me contribute to its development while concurrently aiding my personal growth.</p>
         <div class="social-icons">
