--- a/index.html
+++ b/index.html
@@ -178,7 +178,9 @@
 		  
 		• <strong> Programming Languages:</strong> Python, Java, HTML, CSS, JavaScript
 		  <br>
-		• <strong>Data Science:</strong> NumPy, Pandas, Seaborn , Matplotlib , Plotly , Scikit-Learn • Frameworks: Flask, Django, BootStrap		  <br>
+		• <strong>Data Science:</strong> NumPy, Pandas, Seaborn , Matplotlib , Plotly , Scikit-Learn 
+	      	
+	    	  • <strong>Frameworks:</strong> Flask, Django, BootStrap		  <br>
 
 		• <strong>Operating Systems:</strong> MacOS, Linux, Windows		  <br>
 
