--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 		  
 		• <strong> Programming Languages:</strong> Python, Java, HTML, CSS, JavaScript
 		  <br>
-		• <strong>Data Science:</strong> NumPy, Pandas, Seaborn , Matplotlib , Plotly , Scikit-Learn 
+		• <strong>Data Science:</strong> NumPy, Pandas, Seaborn , Matplotlib , Plotly , Scikit-Learn <br>
 	      	
 	    	  • <strong>Frameworks:</strong> Flask, Django, BootStrap		  <br>
 
