--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
           <a href="https://iamrohitgund.wordpress.com/">
             <i class="fab fa-wordpress"></i>
           </a>
-         
+           <a href="https://bitbucket.org/iamrohitgund/">
+            <i class="fab fa-bitbucket"></i>
+          </a>
         </div>
       </div>
     </section>
